# cish

./: .gitignore  CMakeLists.txt
drivers/: CMakeLists.txt  cishcc.py
src/: AST.cpp  AST.h  ASTBase.cpp  ASTBase.h  ASTBuilder.cpp  ASTBuilder.h  ASTConstantFoldingPass.cpp  ASTConvertLoopsPass.cpp  ASTDeadCodeEliminationPass.cpp  ASTDefUseCalculatorPass.cpp  ASTDefUseInfo.cpp  ASTDefUseInfo.h  ASTExprNumberingPass.cpp  ASTExprPass.cpp  ASTExprPass.h  ASTExprPropagationPass.cpp  ASTFunctionAnalysisPass.h  ASTFunctionPass.cpp  ASTFunctionPass.h  ASTLookup.cpp  ASTLookup.h  ASTPass.cpp  ASTPass.h  ASTPassManager.cpp  ASTPassManager.h  ASTPasses.h  ASTPrivatizeVarsPass.cpp  ASTPropagateExprsPass.cpp  ASTRenameVarsPass.cpp  ASTSimplifyLoopsPass.cpp  ASTSimplifyOperatorsPass.cpp  ASTStreamer.cpp  ASTStreamer.h  ASTStripCastsPass.cpp  ASTSubexprEliminationPass.cpp  BackendBase.cpp  BackendBase.h  CFGMap.cpp  CFGMap.h  CMakeLists.txt  (+108 more)
tests/: array.c  basic.cpp  class.cpp  control.c  funcs.c  globals.c  goto.c  loops.c  operators.c  pointers.c  udt.c  vector.c
